--- a/jruby-degrees/Gemfile
+++ b/jruby-degrees/Gemfile
@@ -1,5 +1,8 @@
 source 'http://rubygems.org'
 
+git 'git://github.com/undees/neography.git'
+gem 'neography',     '~> 0.0.7'
 gem 'jruby-openssl', '~> 0.7'
-gem 'neography',     '~> 0.0'
+
 gem 'sinatra',       '~> 1.1'
+gem 'haml',          '~> 3.0'
