--- a/jruby-degrees/Gemfile
+++ b/jruby-degrees/Gemfile
@@ -2,7 +2,8 @@
 source 'http://rubygems.org'
 
 gem 'neography', '~> 0.0.7',
-  :git => 'git://github.com/undees/neography.git'
+  :git => 'git://github.com/undees/neography.git',
+  :tag => 'warbler'
 
 gem 'jruby-openssl', '~> 0.7'
 # END:neography
