Use branch instead of tag for gem fork

--- a/jruby-degrees/Gemfile
+++ b/jruby-degrees/Gemfile
@@ -2,8 +2,8 @@
 source 'http://rubygems.org'
 
 gem 'neography', '~> 0.0.7',
-  :git => 'git://github.com/undees/neography.git',
-  :tag => 'warbler'
+  :git    => 'git://github.com/undees/neography.git',
+  :branch => 'warbler'
 
 gem 'jruby-openssl', '~> 0.7'
 # END:neography
