--- a/jruby-degrees/Rakefile
+++ b/jruby-degrees/Rakefile
@@ -16,31 +16,35 @@ task :import do
   print 'Importing (0% done, calculating remaining)'
 
   # START:import
-  require 'lib/database'
+  require 'enumerator'
+  require 'lib/database_embed'
 
   File.open('performance.tsv') do |f|
     db = Database.new
 
     f.gets # header
-    f.each_line do |line|
-      _, _, actor_name, movie_name = line.split "\t"
-      next if actor_name.empty? || movie_name.empty?
+    f.each_line.each_slice(1000) do |lines|
+      db.transaction do
+        lines.each do |line|
+          _, _, actor_name, movie_name = line.split "\t"
+          next if actor_name.empty? || movie_name.empty?
 
-      actor = db.find_or_create 'actor', actor_name
-      movie = db.find_or_create 'movie', movie_name
-      db.acted_in actor, movie
-      # END:import
+          actor = db.find_or_create 'actor', actor_name
+          movie = db.find_or_create 'movie', movie_name
+          db.acted_in actor, movie
+        end
+        # END:import
 
-      complete  = f.pos.to_f / f.stat.size
-      elapsed   = Time.now - start
-      remaining = elapsed / complete - elapsed
-      countdown = '%d:%02d' % [remaining / 60, remaining % 60]
+        complete  = f.pos.to_f / f.stat.size
+        elapsed   = Time.now - start
+        remaining = elapsed / complete - elapsed
+        countdown = '%d:%02d' % [remaining / 60, remaining % 60]
 
-      printf "\rImporting (%.02f%% done, %s remaining)      ",
-      complete * 100,
-      complete > 0.05 ? countdown : 'calculating'
-
+        printf "\rImporting (%.02f%% done, %s remaining)      ",
+        complete * 100,
+        complete > 0.05 ? countdown : 'calculating'
       # START:import
+      end
     end
   end
 end
