Update neo4j gem
--HG--
extra : transplant_source : Wd%98%B2%E2%92%7C%FB%AC%25%BF%03%E8%F9%23%0C%AD%C3%07K

--- a/jruby-degrees/Gemfile
+++ b/jruby-degrees/Gemfile
@@ -1,10 +1,7 @@
 # START:neography
 source 'http://rubygems.org'
 
-gem 'neography', '~> 0.0.7',
-  :git    => 'git://github.com/undees/neography.git',
-  :branch => 'warbler'
-
+gem 'neography', '~> 0.0.8'
 gem 'jruby-openssl', '~> 0.7'
 # END:neography
 
